--- a/src/winXP_startup.scss
+++ b/src/winXP_startup.scss
@@ -77,7 +77,9 @@
     width:15px;
     height:15px;
     margin:3px 1px;
-    background: cadetblue;
+    background: linear-gradient(to bottom, rgb(0, 102, 255),30%, white,rgb(0,102,255));
+    
+    border-radius:2px;
 }
 
 /*ANIMATIONS*/
