--- a/src/winXP_login.css
+++ b/src/winXP_login.css
@@ -199,12 +199,72 @@
   cursor: pointer;
 }
 
-.LoginScreenUser--Active {
-  background: -webkit-gradient(linear, left top, right top, from(#00309c), to(#5a7edc));
-  background: linear-gradient(to right, #00309c, #5a7edc);
+@media screen and (min-width: 401px) {
+  .LoginScreenUser--Active {
+    background: -webkit-gradient(linear, left top, right top, from(#00309c), to(#5a7edc));
+    background: linear-gradient(to right, #00309c, #5a7edc);
+  }
+  .LoginScreenUserAvatar--Active {
+    border: 2px solid gold !important;
+  }
 }
 
-.LoginScreenUserAvatar--Active {
-  border: 2px solid gold !important;
+@media screen and (max-width: 750px) {
+  .LoginScreenUser--Container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 200px;
+    margin: auto;
+  }
+  .LoginScreenUser--Container .LoginScreenUser--Middle {
+    text-align: center;
+    margin: 0;
+  }
+  .LoginScreenUser--Container .LoginScreenUser--Right img {
+    top: 12px;
+  }
+  .LoginScreenUser--Active {
+    background: -webkit-gradient(linear, left top, left bottom, from(#00309c), to(#5a7edc));
+    background: linear-gradient(to bottom, #00309c, #5a7edc);
+  }
+  .LoginScreenUserAvatar--Active {
+    border: 2px solid gold !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .LoginScreenUser--Container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 150px;
+    margin: auto;
+  }
+  .LoginScreenUser--Container .LoginScreenUser--Middle {
+    text-align: center;
+    margin: 0;
+    min-width: 100px;
+  }
+  .LoginScreenUser--Container .LoginScreenUser--Middle--Input {
+    width: 100px;
+  }
+  .LoginScreenUser--Container .LoginScreenUser--Right img {
+    top: 12px;
+  }
 }
 /*# sourceMappingURL=winXP_login.css.map */
