--- a/src/winXP_login.scss
+++ b/src/winXP_login.scss
@@ -144,6 +144,7 @@
     .LoginScreenUser--Middle{
         margin-left:15px;
         &--AccName{
+            cursor:pointer;
             font-size:14pt;
         }
         &--TypePass{
@@ -225,7 +226,7 @@
             margin:0;
             min-width:100px;
             &--Input{
-                width:100px;
+                width:80%;
             }
             }
         .LoginScreenUser--Right{
