--- a/src/winxp_desktop.css
+++ b/src/winxp_desktop.css
@@ -1,6 +1,9 @@
-.WinXP_Desktop_Container {
-  height: 100%;
+html {
   overflow-y: hidden;
+}
+
+.WinXP_Desktop_Container {
+  height: 100vh;
 }
 
 .WinXP_Desktop_Container .DesktopArea {
@@ -8,7 +11,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .WinXP_Desktop_Container .Taskbar {
@@ -22,10 +27,13 @@
       -ms-flex-align: center;
           align-items: center;
   color: white;
-  z-index: 100;
-  height: 5%;
+  z-index: 101;
+  height: 50px;
   background-color: #245edc;
   border-top: 3px solid #4993e6;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .WinXP_Desktop_Container .Taskbar--StartMenuButton {
@@ -69,5 +77,19 @@
       -ms-flex-align: center;
           align-items: center;
   width: 150px;
+}
+
+.startMenu {
+  width: 500px;
+  background: white;
+  height: 600px;
+  position: absolute;
+  bottom: 0px;
+}
+
+@media screen and (max-width: 600px) {
+  .startMenu {
+    width: 75vw;
+  }
 }
 /*# sourceMappingURL=winxp_desktop.css.map */
