--- a/src/winxp_desktop.css
+++ b/src/winxp_desktop.css
@@ -122,6 +122,18 @@ html {
 
 .startMenu--Middle--Left {
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.startMenu--Middle--Left button {
+  background-color: transparent;
+  border: none;
 }
 
 .startMenu--Middle--Right {
