--- a/src/winxp_desktop.scss
+++ b/src/winxp_desktop.scss
@@ -88,6 +88,12 @@ html{
         
         &--Left{
             width:50%;
+            display:flex;
+            flex-direction:column;
+            button{
+                background-color:transparent;
+                border:none;
+            }
         }
         &--Right{
             width:50%;
