--- a/src/winxp_desktop.css
+++ b/src/winxp_desktop.css
@@ -50,6 +50,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   font-family: "Roboto";
   font-weight: bold;
@@ -77,6 +78,46 @@ html {
       -ms-flex-align: center;
           align-items: center;
   width: 150px;
+}
+
+.Taskbar--MiddleArea {
+  width: 100%;
+  margin-left: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.TaskBar--MiddleArea--OpenApp {
+  padding: 9px 15px 9px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #3289f2;
+  font-size: 14pt;
+  font-family: 'Roboto';
+  width: auto;
+  border-radius: 5px;
+}
+
+.TaskBar--MiddleArea--OpenApp img {
+  width: 30px;
+  margin: 0px 5px 0px 0px;
+  padding: 0;
+}
+
+.TaskBar--MiddleArea--OpenApp:hover {
+  background-color: #649ee4;
+  cursor: pointer;
 }
 
 .startMenu {
@@ -153,5 +194,9 @@ html {
   .startMenu {
     width: 75vw;
   }
+}
+
+.hidden {
+  display: none !important;
 }
 /*# sourceMappingURL=winxp_desktop.css.map */
