--- a/src/winxp_desktop.scss
+++ b/src/winxp_desktop.scss
@@ -34,6 +34,7 @@ html{
             display:flex;
             justify-content:center;
             align-items:center;
+            border-top-right-radius:10px;
             border-bottom-right-radius:10px;
             font-family:"Roboto";
             font-weight:bold;
@@ -42,6 +43,7 @@ html{
                 background-color:rgb(37, 119, 37);
             }
         }
+        
         &--RightArea{
             font-family:"Roboto";
             font-weight:400;
@@ -55,6 +57,35 @@ html{
             width:150px;
         }
     }
+}
+
+.Taskbar--MiddleArea{
+    width:100%;
+    margin-left:5px;
+    display:flex;
+    justify-content:flex-start;
+}
+
+.TaskBar--MiddleArea--OpenApp{
+    padding:9px 15px 9px 15px;
+    display:flex;
+    justify-content:flex-start;
+    align-items:center;
+    background-color:#3289f2;
+    font-size:14pt;
+    font-family:'Roboto';
+    width:auto;
+    border-radius:5px;
+    img{
+        width:30px;
+        margin:0px 5px 0px 0px;
+        padding:0;
+    }
+    &:hover{
+        background-color:#649ee4;
+        cursor:pointer;
+    }
+    
 }
 
 .startMenu{
@@ -112,4 +143,8 @@ html{
     .startMenu{
         width:75vw;
     }
+}
+
+.hidden{
+    display:none !important;
 }
