--- a/src/WinXP_Desktop_Window.scss
+++ b/src/WinXP_Desktop_Window.scss
@@ -26,3 +26,53 @@
         }
     }
 }
+
+.modal-window{
+    background:white;
+    color:#285fda;
+    width:25%;
+    padding:30px;
+    font-family:'Roboto';
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    border:3px solid #285fda;
+    box-shadow:5px 5px 10px black;
+    p{
+        font-size:16pt;
+        margin-bottom:30px;
+    }
+    button{
+        font-size:14pt;
+        color:white;
+        margin:5px;
+        padding:10px;
+        width:100%;
+        background-color:#285fda;
+        border-radius:15px;
+        border:2px solid white;
+        &:hover{
+            cursor:pointer;
+            background-color:white;
+            color:#285fda;
+            border: 2px solid #285fda;
+        }
+    }
+}
+
+.WinXP_Desktop_Window--Content{
+    padding:10px;
+    font-family:"Roboto";
+    h3{
+    }
+    p{
+        margin-top:10px;
+        line-height:1.6rem;
+    }
+}
