--- a/src/winxp_desktop.scss
+++ b/src/winxp_desktop.scss
@@ -136,6 +136,31 @@ html{
         height:80px;
         background:linear-gradient(#285fda,#1290e8);
         border-top:3px solid gold;
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        div{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            font-family:'Roboto';
+            color:white;
+            padding:10px;
+            cursor:pointer;
+            a{
+                color:white;
+                text-decoration:none;
+                display:flex;
+                justify-content:center;
+                align-items:center;
+            }
+            img{
+                width:50px;
+                padding-right:5px;
+                
+            }
+        }
+        
     }
 }
 
@@ -143,6 +168,26 @@ html{
     .startMenu{
         width:75vw;
     }
+}
+@media screen and (max-width:475px){
+    .startMenu{
+        &--Bottom{
+            div{
+                flex-direction:column;
+                padding-bottom:15px;
+            }
+        }
+    }
+}
+
+@media screen and (max-height:568px){
+.startMenu{
+    top:50px;
+    &--Middle{
+        height:300px;
+    }
+}
+
 }
 
 .hidden{
